--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -14,8 +14,7 @@
     <div class="main-content">
         {{>header}}
         <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis repellendus deleniti odio hic maiores iusto
-            repellat, veritatis temporibus cumque fuga!</p>
+        <p>This site was cerated by Aben Cermeño. It uses data from mapbox.com and darksky.net to fetch weather!</p>
         <img class="portrait" src="/img/pic.png" alt="aben">
 
     </div>
